@@ -5,6 +5,7 @@
 
 * 2014-01-10 - tobias.friedrich@open-xchange.com
 
+ - Fix for bug 29950: Respond with HTTP 401 Unauthorized in case of access restrictions  
  - Fix for bug 30552: Allow UNLOCK for WebDAV resources only for the lock-owning user and the context administrator 
 
 * 2014-01-09 - tobias.friedrich@open-xchange.com
